and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Oct 9, 2014, S. Guatelli tag human_phantom-V10-00-01
- warning in running time deleted

May 4, 2014, A. Dotti tag human_phantom-V10-00-00
- migration to new GPS MT-ready

Nov 11, 2013, S. Guatelli tag human_phantom-V09-06-06
- warning with CLANG removed

Nov 6, 2013, S. Guatelli tag human_phantom-V09-06-05
- Analysis working with MT and sequential mode

Nov 6, 2013, S. Guatelli tag human_phantom-V09-06-04
- Testes and Genitalia modelling added for MIRD model
- MT mode 

Jul 30, 2013, A. Dotti, tag human_phantom-V09-06-03
- Bug fixing for compilation warning for clang32

May 23, 2013, G. Cosmo, tag human_phantom-V09-06-02
- Corrected typo in G4HumanPhantomAnalysisManager for printout of file name.

May 17, 2013, S. Guatelli, tag human_phantom-V09-06-01
- G4HumanPhantomPhysicsList is derived from G4VModularPhysics.
- G4 analysis component introduced
- G4 General Particle Source used
- General cleaning in macro files
- macro.C added to print the content of the ntuple generated 
  in the simulation.

December 12, 2012, V.Ivanchenko tag human_phantom-V09-06-00
- G4HumanPhantomPhysicsList: substitute SetModel by SetEmModel

November 28, 2012, G.Cosmo tag human_phantom-V09-05-05
- Fixed cases of variable shadowing.

November 6, 2012, L.Pandola tag human_phantom-V09-05-04
- Fix syntax in the CMakeLists.txt.

October 25, 2012, L.Pandola tag human_phantom-V09-05-03
- Replace CMakeLists.txt to deal with UI/VIS and GDML.

October 11, 2012, G.Cosmo, tag human_phantom-V09-05-02
- Explicit inclusion of units and constants headers.

June 13, 2012, G. Cosmo, tag human_phantom-V09-05-01
- Make destructor virtual in G4BasePhantomBuilder.
