@@ -42,8 +42,6 @@ class G4HumanPhantomActionInitialization: public G4VUserActionInitialization
 
     virtual void BuildForMaster() const;
     virtual void Build() const;
-  private:
-    G4GeneralParticleSource* masterGPS;
 };
 
 #endif
