@@ -36,17 +36,11 @@
 G4HumanPhantomActionInitialization::G4HumanPhantomActionInitialization():
 G4VUserActionInitialization()
 {
-    //AND->3June2014, temporary to take into account new GPS
-    //Create an instance of GPS in master so shared resources and messenger
-    //exist in master.
-    masterGPS = new G4GeneralParticleSource();
-    //AND<-3June2014
 }
 
 
 G4HumanPhantomActionInitialization::~G4HumanPhantomActionInitialization()
 {
-  delete masterGPS;
 }
 
 void G4HumanPhantomActionInitialization::BuildForMaster() const
